Fix code block horizontal scrolling
Previously, every code block had a space below it for a horizontal
scroll bar, yet no horizontal scroll bars were ever created. Code
blocks would never scroll horizontally and would instead wrap lines.
This commit fixes that. Now, a space for a horizontal scroll bar will
exist only when there is actually a horizontal scroll bar present to
fill it, and every code block which is long enough (horizontally) to
require scrolling will in fact scroll horizontally.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -173,12 +173,15 @@ code {
 
 pre {
     padding: 6px 10px;
-    overflow-x: scroll;
+    overflow-x: auto;
 
     > code {
         border: 0;
         padding-right: 0;
         padding-left: 0;
+        overflow-wrap: normal;
+        word-wrap: normal;
+        white-space: pre;
     }
 }
 
